re PR tree-optimization/29585 (tree check: expected ssa_name, have var_decl in is_old_name, at tree-into-ssa.c:558)

2007-03-31  Diego Novillo  <dnovillo@redhat.com>
	    Mark Mitchell  <mark@codesourcery.com>

	PR 29585
	* class.c (dfs_accumulate_vtbl_inits): Use build_address
	to build the vtbl entry.

testsuite/ChangeLog

	PR 29585
	* g++.dg/tree-ssa/pr29585.C: New test.


Co-Authored-By: Mark Mitchell <mark@codesourcery.com>

From-SVN: r123386